--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Q-Up</string>
     <string name="home_title">Home</string>
+    <string name="app_welcome">Welcome to Q-Up</string>
+    <string name="setu_button">Enter SETU</string>
 </resources>
