--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="app_welcome">Welcome to Q-Up</string>
     <string name="setu_button">Enter SETU</string>
     <string name="map_title">Attraction Map</string>
+    <string name="back_button">Back</string>
 </resources>
