--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="setu_button">Enter SETU</string>
     <string name="map_title">Attraction Map</string>
     <string name="back_button">Back</string>
+    <string name="join_queue_button">Join Queue</string>
 </resources>
