Added Emerald Park data

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="map_title">Attraction Map</string>
     <string name="back_button">Back</string>
     <string name="join_queue_button">Join Queue</string>
+    <string name="emerald_park_button">Enter Emerald Park</string>
 </resources>
