--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,6 @@
     <string name="emerald_park_button">Enter Emerald Park</string>
     <string name="attraction_list_button">Attraction List</string>
     <string name="map_button">Attraction List</string>
+    <string name="loading">Loading...</string>
+    <string name="loading_failed">Failed to load result. Check internet connection and try again.</string>
 </resources>
