--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,4 +12,13 @@
     <string name="map_button">Attraction List</string>
     <string name="loading">Loading...</string>
     <string name="loading_failed">Failed to load result. Check internet connection and try again.</string>
+    <string name="attraction_name_label">Name</string>
+    <string name="attraction_type_label">Type</string>
+    <string name="attraction_status_label">Status</string>
+    <string name="attraction_queue_time_label">Estimated Queue Time</string>
+    <string name="attraction_length_label">Length</string>
+    <string name="attraction_length_unit">sec.</string>
+    <string name="attraction_cost_label">Price</string>
+    <string name="attraction_location_label">Location</string>
+    <string name="attraction_description_label">Description</string>
 </resources>
