--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,11 @@
     <string name="attraction_cost_label">Price</string>
     <string name="attraction_location_label">Location</string>
     <string name="attraction_description_label">Description</string>
+    <string name="join_queue_success_alert_title">You\'re in!</string>
+    <!--append attraction name to end-->
+    <string name="join_queue_success_alert_desc">You have queued-up for </string>
+    <string name="error_alert_title">Error</string>
+    <string name="join_queue_error_409_alert_desc">You are already queued for this attraction.</string>
+    <string name="error_500_alert_desc">Something went wrong. Check your internet connection and try again.</string>
+    <string name="alert_okay">Okay</string>
 </resources>
